pigon-micro-web/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  background-image: url("./assets/bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: #646cff;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.form-group {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  text-align: left;
}

.modal {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: #242424d6;
  padding: 2rem;
  border-radius: 1rem;
  backdrop-filter: blur(16px);
}

.modal h1 {
  margin: 1rem;
}

.error-msg {
  background-color: rgb(74, 0, 0);
  padding: 1rem;
  border-radius: 0.5rem;
}

.spinner {
  width: 3rem;
  height: 3rem;
  border-radius: 100%;
  border: 0.5rem solid transparent;
  border-top: 0.5rem solid teal;
  animation: spin ease-in-out infinite 1s;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

/* Core layout */
.header {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 5rem;
  z-index: 10;
  background-color: #0000008d;
  backdrop-filter: blur(8px);
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
}

.sidebar {
  position: fixed;
  top: 5rem;
  left: 0px;
  width: 30%;
  height: calc(100% - 5rem);
  background-color: #1a1a1ada;
  backdrop-filter: blur(8px);
}

.chat-main-container {
  position: fixed;
  top: 0px;
  left: 30%;
  width: 70%;
  height: 100%;
}

.user-display {
  padding: 0.5rem;
  padding-left: 1rem;
  background-color: rgb(37, 37, 37);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  border-radius: 999px;
}

.user-display span {
  font-weight: bolder;
}

.logout {
  transition: 200ms;
  padding: 0.5rem;
  border-radius: 100%;
  cursor: pointer;
}

.logout:hover {
  background-color: rgba(255, 255, 255, 0.255);
}

.newchat {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 100%;
  height: 3rem;
  background-color: rgb(12, 12, 12);
  text-align: center;
  line-height: 3rem;
  cursor: pointer;
  transition: 200ms;
}

.newchat:hover {
  background-color: rgb(55, 55, 55);
}

.modal-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
  border-radius: 1rem;
  background-color: rgb(45, 45, 45);
  max-height: 60dvh;
  overflow-y: auto;
}

.list-element {
  font-size: 2rem;
  height: 4rem;
  line-height: 4rem;
  text-align: center;
  background-color: rgb(64, 64, 64);
  border-radius: 0.5rem;
  cursor: pointer;
  border: 2px solid transparent;
  transition: 200ms;
  flex: 0;
}

.list-element:hover {
  border: 2px solid #535bf2;
}


/* Chat list stuff */

.chatlist {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: calc(100% - 3rem);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.chatlist div {
  position: relative;
  width: 100%;
  height: 3rem;
  background-color: rgb(68, 68, 68);
  line-height: 3rem;
  cursor: pointer;
}

/* Chat stuff */

.send-message {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 100%;
  height: 3rem;
  display: flex;
  flex-direction: row;
  backdrop-filter: blur(8px);
}

.send-message input[type="text"] {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  border: none;
  font-size: 1.5rem;
}

.message-display {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 85%;
  padding-top: 5rem;
  padding-bottom: 5rem;
  display: flex;
  flex-direction: column-reverse;
  gap: 1rem;
  overflow-y: auto;
}

.message-display .message, .message-display .mymessage {
  max-width: 50%;
  text-align: left;
}

.message-display .message {
  background-color: #3d44ca;
  border-radius: 1rem;
  padding: 1rem;
  margin-right: auto;
  align-self: flex-start;
  overflow-wrap: anywhere;
}

.message-display .mymessage {
  background-color: #252edc;
  border-radius: 1rem;
  padding: 1rem;
  margin-left: auto;
  align-self: flex-start;
}

.loading-popup {
  position: absolute;
  top: 5rem;
  left: 50%;
  background-color: rgba(0, 0, 0, 0.6);
  border-radius: 1rem;
  padding: 1rem;
  transform: translate(-50%, 0%);
  z-index: 100;
}

.chat-header {
  position: absolute;
  top: 15%;
  left: 50%;
  padding: 1rem;
  text-align: center;
  line-height: 1rem;
  height: 1rem;
  border-radius: 1rem;
  width: fit-content;
  background-color: #1a1a1a;
}

